--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -1120,7 +1120,7 @@
                                 <rect key="frame" x="0.0" y="59" width="320" height="51"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="frw-e6-Ocr">
+                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="frw-e6-Ocr">
                                         <rect key="frame" x="0.0" y="2" width="36" height="33"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.25882352939999997" green="0.62745098040000002" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -1131,6 +1131,9 @@
                                         <state key="normal" title="&lt;&lt;">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="leftRideTypeButtonTapped:" destination="gzB-dY-rge" eventType="touchUpInside" id="Cke-hq-h2K"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iyE-hO-kRY">
                                         <rect key="frame" x="284" y="2" width="36" height="33"/>
@@ -1140,6 +1143,9 @@
                                         <state key="normal" title=">>">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="rightRideTypeButtonTapped:" destination="gzB-dY-rge" eventType="touchUpInside" id="bMh-H9-Ks5"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Ride To Work Tomorrow" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0HG-3c-m8L" userLabel="ride type Label">
                                         <rect key="frame" x="44" y="3" width="231" height="21"/>
@@ -1147,7 +1153,7 @@
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g2W-u3-OiR" userLabel="decrease time button">
+                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g2W-u3-OiR" userLabel="decrease time button">
                                         <rect key="frame" x="66" y="27" width="33" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.25882352939999997" green="0.62745098040000002" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -1159,6 +1165,9 @@
                                         <state key="normal" title="-">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="decreaseRideTimeButtonTapped:" destination="gzB-dY-rge" eventType="touchUpInside" id="ljQ-XV-bWw"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3f4-T4-Cdd" userLabel="increase time button">
                                         <rect key="frame" x="221" y="27" width="33" height="21"/>
@@ -1171,6 +1180,9 @@
                                         <state key="normal" title="+">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="increaseRideTimeButtonTapped:" destination="gzB-dY-rge" eventType="touchUpInside" id="Gu5-aa-Alg"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:00 - 10:15 pm" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bO-1R-ukM" userLabel="rideTime">
                                         <rect key="frame" x="104" y="26" width="112" height="24"/>
@@ -1245,7 +1257,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="142" y="231" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="762D2D65-33F0-4E13-8A97-21F04F4921C5" colorSpace="pattern"/>
+                                <color key="color" patternImage="C5462C5C-7C8A-43FB-AEBD-CE4D5EA87945" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="find-crew-wood.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
                                 <rect key="frame" x="0.0" y="512" width="320" height="56"/>
@@ -1305,14 +1317,20 @@
                     </view>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <connections>
+                        <outlet property="decreaseRideTimeButton" destination="g2W-u3-OiR" id="pQg-Kh-cxt"/>
                         <outlet property="dropOffSearchBar" destination="OVl-W9-bgZ" id="665-jO-bWV"/>
                         <outlet property="dropOffSearchDisplayController" destination="Hec-aF-RnK" id="Vwz-VS-frZ"/>
                         <outlet property="findCrewButton" destination="WEi-k0-yGT" id="7dm-js-WiR"/>
+                        <outlet property="increaseRideTimeButton" destination="3f4-T4-Cdd" id="alR-nN-5if"/>
+                        <outlet property="leftRideTypeButton" destination="frw-e6-Ocr" id="eqI-gS-slp"/>
                         <outlet property="mapView" destination="RED-KU-XOZ" id="PHN-mu-M3h"/>
                         <outlet property="pickUpSearchBar" destination="bxD-02-fZW" id="ycz-fk-c4u"/>
                         <outlet property="pickUpSearchDisplayController" destination="SXn-6u-W8v" id="3Ke-UC-f7g"/>
                         <outlet property="revealButtonItem" destination="Erd-j4-4HX" id="Z4U-LF-Ptn"/>
                         <outlet property="rideRequestActivityIndicator" destination="7XM-fk-vcd" id="xi8-f3-Zcq"/>
+                        <outlet property="rideTimeLabel" destination="0bO-1R-ukM" id="XOO-OU-lVu"/>
+                        <outlet property="rideTypeLabel" destination="0HG-3c-m8L" id="Hcq-jE-gwW"/>
+                        <outlet property="rightRideTypeButton" destination="iyE-hO-kRY" id="vxe-Yy-Vfv"/>
                         <segue destination="ddu-Zc-dJg" kind="modal" identifier="toFindingCrew" id="9AW-cq-4eF"/>
                         <segue destination="vXZ-lx-hvc" kind="modal" identifier="onboarding_login" animates="NO" id="WTk-75-MPQ"/>
                         <segue destination="FZI-WL-nLp" kind="modal" identifier="onboarding_receipts" animates="NO" id="R97-G3-Fuo"/>
@@ -1515,7 +1533,7 @@
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                         <rect key="frame" x="135" y="153" width="37" height="37"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="color" patternImage="46BC1ABC-8EEE-4B6A-B3D4-90E0669C1C0F" colorSpace="pattern"/>
+                                        <color key="color" patternImage="736E653E-9852-4A47-8D1C-9BDD1A86E9E6" colorSpace="pattern"/>
                                     </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.99502558297574695" blue="0.92248104749216908" alpha="1" colorSpace="calibratedRGB"/>
@@ -1843,7 +1861,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="46BC1ABC-8EEE-4B6A-B3D4-90E0669C1C0F" width="320" height="460">
+        <image name="736E653E-9852-4A47-8D1C-9BDD1A86E9E6" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11730,7 +11748,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="762D2D65-33F0-4E13-8A97-21F04F4921C5" width="320" height="460">
+        <image name="C5462C5C-7C8A-43FB-AEBD-CE4D5EA87945" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
