--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -1125,10 +1125,10 @@
                                         </accessibility>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="frw-e6-Ocr">
-                                        <rect key="frame" x="0.0" y="0.0" width="36" height="36"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="40" height="36"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="36" id="GCm-wH-jFa"/>
+                                            <constraint firstAttribute="width" constant="40" id="U42-y1-6nq"/>
                                         </constraints>
                                         <state key="normal" image="left-arrow-v2.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -1138,10 +1138,10 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iyE-hO-kRY">
-                                        <rect key="frame" x="282" y="0.0" width="36" height="36"/>
+                                        <rect key="frame" x="278" y="0.0" width="40" height="36"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="36" id="NRm-KJ-ViU"/>
+                                            <constraint firstAttribute="width" constant="40" id="vhL-k1-ziO"/>
                                         </constraints>
                                         <state key="normal" image="right-arrow-v2.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -1151,10 +1151,10 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Ride To Work Tomorrow" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0HG-3c-m8L" userLabel="ride type Label">
-                                        <rect key="frame" x="44" y="6" width="229" height="21"/>
+                                        <rect key="frame" x="46" y="6" width="225" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="Ysf-eN-lEz"/>
+                                            <constraint firstAttribute="height" constant="21" id="amI-jJ-UPT"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -1168,7 +1168,7 @@
                                             <outlet property="delegate" destination="gzB-dY-rge" id="m7G-gc-iV9"/>
                                         </connections>
                                     </searchBar>
-                                    <searchBar contentMode="redraw" restorationIdentifier="dropOffSearchBar" searchBarStyle="minimal" placeholder="Enter Drop Off Location" translatesAutoresizingMaskIntoConstraints="NO" id="OVl-W9-bgZ" userLabel="dropOffSearchBar">
+                                    <searchBar contentMode="redraw" ambiguous="YES" restorationIdentifier="dropOffSearchBar" searchBarStyle="minimal" placeholder="Enter Drop Off Location" translatesAutoresizingMaskIntoConstraints="NO" id="OVl-W9-bgZ" userLabel="dropOffSearchBar">
                                         <rect key="frame" x="32" y="69" width="285" height="44"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -1214,34 +1214,33 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="0bO-1R-ukM" firstAttribute="leading" secondItem="g2W-u3-OiR" secondAttribute="trailing" constant="4" id="3ZU-aO-whn"/>
-                                    <constraint firstItem="iyE-hO-kRY" firstAttribute="baseline" secondItem="frw-e6-Ocr" secondAttribute="baseline" id="7QF-cW-uzN"/>
+                                    <constraint firstItem="iyE-hO-kRY" firstAttribute="leading" secondItem="0HG-3c-m8L" secondAttribute="trailing" constant="7" id="4ws-ew-W9S"/>
+                                    <constraint firstItem="frw-e6-Ocr" firstAttribute="bottom" secondItem="iyE-hO-kRY" secondAttribute="bottom" id="66v-AY-SUB"/>
                                     <constraint firstItem="0bO-1R-ukM" firstAttribute="bottom" secondItem="g2W-u3-OiR" secondAttribute="bottom" id="97u-BC-8h1"/>
+                                    <constraint firstAttribute="trailing" secondItem="iyE-hO-kRY" secondAttribute="trailing" constant="2" id="9dC-Hq-pWQ"/>
+                                    <constraint firstItem="frw-e6-Ocr" firstAttribute="top" secondItem="kIP-Jh-lle" secondAttribute="top" id="BIu-eq-ZDh"/>
+                                    <constraint firstItem="frw-e6-Ocr" firstAttribute="leading" secondItem="kIP-Jh-lle" secondAttribute="leading" id="C1r-Fp-ays"/>
+                                    <constraint firstItem="iyE-hO-kRY" firstAttribute="top" secondItem="7YZ-ZF-u99" secondAttribute="top" id="F51-4O-nd3"/>
                                     <constraint firstItem="bxD-02-fZW" firstAttribute="leading" secondItem="7YZ-ZF-u99" secondAttribute="leading" constant="32" id="FeJ-Ne-oRS"/>
-                                    <constraint firstItem="iyE-hO-kRY" firstAttribute="top" secondItem="frw-e6-Ocr" secondAttribute="top" id="Hdt-Iq-Ef0"/>
-                                    <constraint firstItem="frw-e6-Ocr" firstAttribute="top" secondItem="7YZ-ZF-u99" secondAttribute="top" id="IS1-zh-upX"/>
-                                    <constraint firstItem="iyE-hO-kRY" firstAttribute="top" secondItem="kIP-Jh-lle" secondAttribute="top" id="JSC-xp-yzw"/>
-                                    <constraint firstItem="bxD-02-fZW" firstAttribute="top" secondItem="0HG-3c-m8L" secondAttribute="bottom" constant="10" id="Ls6-6Z-IM6"/>
-                                    <constraint firstItem="bxD-02-fZW" firstAttribute="top" secondItem="frw-e6-Ocr" secondAttribute="bottom" constant="1" id="OBX-Cg-wSn"/>
-                                    <constraint firstItem="0HG-3c-m8L" firstAttribute="leading" secondItem="frw-e6-Ocr" secondAttribute="trailing" constant="8" symbolic="YES" id="PFq-th-867"/>
+                                    <constraint firstItem="iyE-hO-kRY" firstAttribute="baseline" secondItem="frw-e6-Ocr" secondAttribute="baseline" id="NEC-9c-lrz"/>
                                     <constraint firstAttribute="trailing" secondItem="bxD-02-fZW" secondAttribute="trailing" constant="3" id="Q6m-2D-RDT"/>
                                     <constraint firstAttribute="trailing" secondItem="3f4-T4-Cdd" secondAttribute="trailing" constant="20" symbolic="YES" id="QPF-2J-apN"/>
                                     <constraint firstItem="3f4-T4-Cdd" firstAttribute="bottom" secondItem="0bO-1R-ukM" secondAttribute="bottom" id="QdH-5e-Uwd"/>
                                     <constraint firstItem="g2W-u3-OiR" firstAttribute="leading" secondItem="7YZ-ZF-u99" secondAttribute="leading" constant="66" id="R76-11-HBK"/>
                                     <constraint firstItem="3f4-T4-Cdd" firstAttribute="leading" secondItem="0bO-1R-ukM" secondAttribute="trailing" constant="3" id="Sot-r9-urb"/>
-                                    <constraint firstAttribute="trailing" secondItem="iyE-hO-kRY" secondAttribute="trailing" constant="2" id="T4R-26-IQv"/>
-                                    <constraint firstItem="frw-e6-Ocr" firstAttribute="bottom" secondItem="iyE-hO-kRY" secondAttribute="bottom" id="TaE-T9-wmi"/>
+                                    <constraint firstItem="bxD-02-fZW" firstAttribute="top" secondItem="0HG-3c-m8L" secondAttribute="bottom" constant="10" id="U4r-5i-WWM"/>
                                     <constraint firstAttribute="bottom" secondItem="kIP-Jh-lle" secondAttribute="bottom" id="VFt-Pj-0Ql"/>
                                     <constraint firstItem="g2W-u3-OiR" firstAttribute="baseline" secondItem="3f4-T4-Cdd" secondAttribute="baseline" id="WjB-pD-qX0"/>
                                     <constraint firstItem="kIP-Jh-lle" firstAttribute="bottom" secondItem="3f4-T4-Cdd" secondAttribute="bottom" id="Yxe-3q-kcU"/>
+                                    <constraint firstItem="bxD-02-fZW" firstAttribute="top" secondItem="frw-e6-Ocr" secondAttribute="bottom" constant="1" id="cDd-iA-BIk"/>
+                                    <constraint firstItem="0HG-3c-m8L" firstAttribute="leading" secondItem="frw-e6-Ocr" secondAttribute="trailing" constant="6" id="ery-lF-h8k"/>
+                                    <constraint firstItem="0HG-3c-m8L" firstAttribute="top" secondItem="7YZ-ZF-u99" secondAttribute="top" constant="6" id="gkv-FD-xui"/>
                                     <constraint firstItem="bxD-02-fZW" firstAttribute="trailing" secondItem="OVl-W9-bgZ" secondAttribute="trailing" id="iUc-GQ-B6G"/>
                                     <constraint firstAttribute="height" constant="147" id="lEo-tM-hgb"/>
                                     <constraint firstAttribute="trailing" secondItem="kIP-Jh-lle" secondAttribute="trailing" id="lQ6-vh-fqD"/>
+                                    <constraint firstItem="iyE-hO-kRY" firstAttribute="top" secondItem="frw-e6-Ocr" secondAttribute="top" id="lqc-gr-5HM"/>
                                     <constraint firstItem="kIP-Jh-lle" firstAttribute="leading" secondItem="7YZ-ZF-u99" secondAttribute="leading" id="mec-Su-u9k"/>
-                                    <constraint firstItem="iyE-hO-kRY" firstAttribute="leading" secondItem="0HG-3c-m8L" secondAttribute="trailing" constant="9" id="sTD-hF-VfP"/>
                                     <constraint firstItem="0bO-1R-ukM" firstAttribute="top" secondItem="g2W-u3-OiR" secondAttribute="top" id="tbR-FT-9fO"/>
-                                    <constraint firstItem="0HG-3c-m8L" firstAttribute="top" secondItem="7YZ-ZF-u99" secondAttribute="top" constant="6" id="tuX-Vc-ViM"/>
-                                    <constraint firstItem="frw-e6-Ocr" firstAttribute="leading" secondItem="kIP-Jh-lle" secondAttribute="leading" id="vBk-35-uMx"/>
-                                    <constraint firstItem="OVl-W9-bgZ" firstAttribute="top" secondItem="iyE-hO-kRY" secondAttribute="bottom" constant="33" id="vUy-wL-MvE"/>
                                     <constraint firstItem="bxD-02-fZW" firstAttribute="leading" secondItem="OVl-W9-bgZ" secondAttribute="leading" id="wGe-YC-995"/>
                                     <constraint firstItem="3f4-T4-Cdd" firstAttribute="top" secondItem="0bO-1R-ukM" secondAttribute="top" id="z51-v5-2Tx"/>
                                 </constraints>
@@ -1256,7 +1255,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="142" y="231" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="9FF95EE6-88BC-4B46-BC1F-A3338D33B3B6" colorSpace="pattern"/>
+                                <color key="color" patternImage="E1552282-4DD1-4D2B-834E-4104D54F3262" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="find-crew-wood.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
                                 <rect key="frame" x="0.0" y="522" width="320" height="46"/>
@@ -1494,7 +1493,7 @@
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                         <rect key="frame" x="135" y="109" width="37" height="37"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="color" patternImage="3C83E554-5B20-4612-81D1-85E308CECFAE" colorSpace="pattern"/>
+                                        <color key="color" patternImage="546BBB36-6B72-411A-B655-E0CF0B9A9707" colorSpace="pattern"/>
                                     </activityIndicatorView>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ride to work tomorrow between 10:30 - 10:45 am" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="3Me-33-mwi">
                                         <rect key="frame" x="20" y="82" width="280" height="83"/>
@@ -1822,7 +1821,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="3C83E554-5B20-4612-81D1-85E308CECFAE" width="320" height="460">
+        <image name="546BBB36-6B72-411A-B655-E0CF0B9A9707" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11709,7 +11708,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="9FF95EE6-88BC-4B46-BC1F-A3338D33B3B6" width="320" height="460">
+        <image name="E1552282-4DD1-4D2B-834E-4104D54F3262" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
